--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,15 @@
         <developerConnection>scm:svn:svn+ssh://repositories/svn/repositories/central/de/cismet/cids/custom/sudplan/geocpm-rest/trunk</developerConnection>
         <url>http://repositories:8082/central/browse/de/cismet/cids/custom/sudplan/geocpm-rest/trunk</url>
     </scm>
-    
+
+       
+       
+       
+
+       
+       
     <dependencies>
+
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>simple-rest-server</artifactId>
@@ -62,6 +69,36 @@
             <artifactId>commons-io</artifactId>
             <version>2.1</version>
         </dependency>
+        
+<!--        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.8.1</artifactId>
+            <version>1.01</version>
+        </dependency>-->
+        
+                <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.8.1</artifactId>
+            <version>1.01</version>
+        </dependency>
+<!--        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-core_2.9.1</artifactId>
+            <version>1.1-SNAPSHOT.120119</version>
+        </dependency>-->
+        
+         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        
+         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.13</version>
+        </dependency>
+        
     </dependencies>
     
     <build>
@@ -98,7 +135,8 @@
                         <phase>package</phase>
                     </execution>
                 </executions>
-            </plugin>          
+            </plugin>  
+            
         </plugins>
     </build>
 </project>
