--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 
     <name>GeoCPM REST Wrapper</name>
     <description>REST Wrapper for the GeoCPM model that calculates surface runoff</description>
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License</name>
+            <distribution>repo</distribution>
+            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
+        </license>
+    </licenses>
 
     <prerequisites>
         <maven>3</maven>
